--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <title>Conveyors</title>
   </head>
   <body>
