more pulley types

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-    <title>Conveyors</title>
+    <title>CONVtek</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
